another update to the xhr detaches type

--- a/DataAccessTypesBase/manifest.json
+++ b/DataAccessTypesBase/manifest.json
@@ -7,7 +7,7 @@
   },
   "mapping": [
     {
-      "dataSetId": "DataSource ID goes here",
+      "dataSetId": "Dataset id goes here",
       "alias": "DAPersistent",
       "fields": [
         {
