--- a/DataAccessTypesBase/manifest.json
+++ b/DataAccessTypesBase/manifest.json
@@ -7,7 +7,7 @@
   },
   "mapping": [
     {
-      "dataSetId": "61db8998-8426-4e8c-a78d-ce8437b1d8b7",
+      "dataSetId": " -- Add datasource ID here -- ",
       "alias": "DAPersistent",
       "fields": [
         {
@@ -32,6 +32,5 @@
         }
       ]
     }
-  ],
-  "id": "4840eea6-f0f1-4c41-b0de-f7183c93e2e9"
+  ]
 }
