--- a/automation/profilePicOnly/manifest.json
+++ b/automation/profilePicOnly/manifest.json
@@ -1,10 +1,9 @@
 {
-  "name": "profilePicOnly",
+  "name": "profilePicOnlyAutomation",
   "version": "1.0.0",
   "size": {
     "width": 2,
     "height": 1.75
   },
-  "mapping": [],
-  "id": "acd34f93-0ab8-4df7-abac-8fa2f88b1019"
+  "mapping": []
 }
