still working on

--- a/regression/AvatarTest/manifest.json
+++ b/regression/AvatarTest/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "AvatarTest-LLE",
-  "version": "0.0.2",
+  "name": "AvatarViewer-LLE",
+  "version": "1.0.0",
   "mapping": [
     {
       "alias": "DAj4",
