Updated to version 3
Updated to version 3 of avatar test, removing old tests

--- a/regression/AvatarTest.3/manifest.json
+++ b/regression/AvatarTest.3/manifest.json
@@ -1,6 +1,7 @@
 {
   "name": "AvatarViewer-LLE",
-  "version": "1.0.0",
+  "version": "3.0.0",
+  "fullpage": true,
   "mapping": [
     {
       "alias": "DAj4",
