Friday updates to new qa multipage card

--- a/other/qualityAssurance/manifest.json
+++ b/other/qualityAssurance/manifest.json
@@ -1,15 +1,26 @@
 {
   "name": "qualityAssurance",
   "version": "1.0.0",
+  "domo.domo": "datasourceID: 41522a1b-fd44-452f-8e9a-5dea7b40bef9",
+  "qa2staging.qa_sprintIssues": "datasourceID: fef20312-fe5c-4da4-ba46-c2f06aa4564e",
+  "qa2staging.qa_servers": "datasourceID: 2309b1f8-0f17-4b0f-b60a-675fe0919493",
+  "qa2staging.qa_testers": "datasourceID: 8d8ea0b1-711b-41fe-abec-061cd1b4ead8",
+  "fullpage": true,
   "size": {
-    "width": 1,
-    "height": 1
+    "width": 5,
+    "height": 2.5
   },
   "mapping": [
     {
       "dataSetId": "61db8998-8426-4e8c-a78d-ce8437b1d8b7",
       "alias": "qaData",
       "fields": []
+    },
+    {
+      "dataSetId": "2309b1f8-0f17-4b0f-b60a-675fe0919493",
+      "alias": "serverList",
+      "fields": []
     }
-  ]
+  ],
+  "id": "e3a9bbf6-2ddc-4ef8-9cfd-6bd5c0f4c09a"
 }
