quality assurance sprint page working
sprint working needs cleanup

--- a/other/qualityAssurance/manifest.json
+++ b/other/qualityAssurance/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "qualityAssurance",
+  "name": "qualityAssurance-test",
   "version": "1.0.0",
   "domo.domo": "datasourceID: 41522a1b-fd44-452f-8e9a-5dea7b40bef9",
   "qa2staging.qa_sprintIssues": "datasourceID: fef20312-fe5c-4da4-ba46-c2f06aa4564e",
@@ -12,15 +12,43 @@
   },
   "mapping": [
     {
-      "dataSetId": "61db8998-8426-4e8c-a78d-ce8437b1d8b7",
-      "alias": "qaData",
-      "fields": []
-    },
-    {
       "dataSetId": "2309b1f8-0f17-4b0f-b60a-675fe0919493",
       "alias": "serverList",
       "fields": []
-    }
-  ],
-  "id": "e3a9bbf6-2ddc-4ef8-9cfd-6bd5c0f4c09a"
+    },
+    {
+      "dataSetId": "fef20312-fe5c-4da4-ba46-c2f06aa4564e",
+      "alias": "qasi",
+      "fields": [{
+        "alias": "squad",
+        "columnName": "Squad"
+      }, {
+        "alias": "status",
+        "columnName": "Status"
+      }, {
+        "alias": "jira",
+        "columnName": "JiraNumber"
+      }, {
+        "alias": "summary",
+        "columnName": "Summary"
+      }, {
+        "alias": "notes",
+        "columnName": "Notes"
+      }, {
+        "alias": "reason",
+        "columnName": "Reason"
+      }, {
+        "alias": "sprint",
+        "columnName": "Sprint"
+      }, {
+        "alias": "test",
+        "columnName": "Left2Test"
+      }, {
+        "alias": "sprintlist",
+        "columnName": "SprintList"
+      }
+    ]
+}  ],
+  "oldID": "e3a9bbf6-2ddc-4ef8-9cfd-6bd5c0f4c09a",
+  "id": "d2ff31a6-6cd6-46c1-929a-c3ab6eb445d2"
 }
