--- a/other/qualityAssurance/manifest.json
+++ b/other/qualityAssurance/manifest.json
@@ -2,9 +2,16 @@
   "name": "qualityAssurance-test",
   "version": "1.0.0",
   "domo.domo": "datasourceID: 41522a1b-fd44-452f-8e9a-5dea7b40bef9",
-  "qa2staging.qa_sprintIssues": "datasourceID: fef20312-fe5c-4da4-ba46-c2f06aa4564e",
-  "qa2staging.qa_servers": "datasourceID: 2309b1f8-0f17-4b0f-b60a-675fe0919493",
-  "qa2staging.qa_testers": "datasourceID: 8d8ea0b1-711b-41fe-abec-061cd1b4ead8",
+  "===============": "==================================================",
+  "domo.demo_sprintIssues_qasi": "datasourceID: e16b3d4a-2ce6-4b02-a9dc-47e4685c42f0",
+  "domo.demo_serverList": "datasourceID: 41e6f660-f72b-4ac4-beaf-200e3721e9c7",
+  "domo.demo_teamList": "datasourceID: cc226fea-8611-401a-ae3b-b667f1d2d2f9",
+  "domo.demo_hfSquad": "7983e8ea-b806-4ff7-bd60-108bce0340e2",
+  "---------------": "--------------------------------------------------",
+  "qa2staging.qa_sprintIssues_qasi": "datasourceID: fef20312-fe5c-4da4-ba46-c2f06aa4564e",
+  "qa2staging.qa_serverList": "datasourceID: 2309b1f8-0f17-4b0f-b60a-675fe0919493",
+  "qa2staging.qa_teamList": "datasourceID: 8d8ea0b1-711b-41fe-abec-061cd1b4ead8",
+  "qa2staging.qa_hfSquad": "datasourceID: f4be40c9-6a41-496d-b029-0417f23e460d",
   "fullpage": true,
   "size": {
 	"width": 5,
@@ -16,6 +23,24 @@
 	  "alias": "serverList",
 	  "fields": []
 	},
+  	{
+	  "dataSetId": "f4be40c9-6a41-496d-b029-0417f23e460d",
+		"alias": "hfSquad",
+		"fields": [
+			{
+				"alias": "name",
+				"columnName": "Name"
+			},
+			{
+				"alias": "team",
+				"columnName": "Team"
+			},
+			{
+				"alias": "area",
+				"columnName": "Product area"
+			}
+		]
+	  },
 	{
 	  "dataSetId": "8d8ea0b1-711b-41fe-abec-061cd1b4ead8",
 	  "alias": "teamList",
