hotfoot squads place is working
could still use some cleanup for fade intro

--- a/other/qualityAssurance/manifest.json
+++ b/other/qualityAssurance/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "qualityAssurance",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "domo.domo": "datasourceID: 41522a1b-fd44-452f-8e9a-5dea7b40bef9",
   "===============": "==================================================",
   "domo.demo_sprintIssues_qasi": "datasourceID: e16b3d4a-2ce6-4b02-a9dc-47e4685c42f0",
@@ -117,5 +117,6 @@
   "oldID": "e3a9bbf6-2ddc-4ef8-9cfd-6bd5c0f4c09a",
   "domo.domo - id": "7aeefdc5-7549-46dc-b242-3f93247d0d20",
   "qa2staging.qa - id": "d2ff31a6-6cd6-46c1-929a-c3ab6eb445d2",
+  "3D domo.demo - id": "e7eb4990-66b2-4a2c-b3cb-cf531fecfb05",
   "id": "e7eb4990-66b2-4a2c-b3cb-cf531fecfb05"
 }
