added director column to teams page

--- a/other/qualityAssurance/manifest.json
+++ b/other/qualityAssurance/manifest.json
@@ -77,6 +77,10 @@
           "columnName": "Intern2"
         },
         {
+          "alias": "director",
+          "columnName": "Director"
+        },
+        {
           "alias": "features",
           "columnName": "Features"
         }
