--- a/other/qualityAssuranceV2/manifest.json
+++ b/other/qualityAssuranceV2/manifest.json
@@ -138,7 +138,8 @@
         },
         {
           "alias": "hfsTeam",
-          "columnName": "Team"
+          "columnName": "Team",
+          "type": "string"
         }
       ]
     }
