Added hotfix lead position to hoe page

--- a/other/qualityAssuranceV2/manifest.json
+++ b/other/qualityAssuranceV2/manifest.json
@@ -140,6 +140,11 @@
           "alias": "hfsTeam",
           "columnName": "Team",
           "type": "string"
+        },
+        {
+          "alias": "hfsLead",
+          "columnName": "Lead",
+          "type": "string"
         }
       ]
     }
